Aggiunta seconda immagine con hover

--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
             <!-- Foto -->
             <div class="rettangolo">
 
-                <!-- <img> -->
-                <img src="img/1.webp" alt="img1">
-                <!-- /img -->
-
                 <!-- img hover -->
+                <img class="immagine-sotto" src="img/1b.webp" alt="img seconda">
                 <!-- /img hover -->
+
+                <!-- <img> -->
+                <img class="immagine-sopra" src="img/1.webp" alt="img1">
+                <!-- /img -->
 
                 <!-- Cuore -->
                 <div class="cuore">
